Ebx.WebApi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ebx-backend-service
spec:
  selector:
    app: ebx-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 32009
      protocol: TCP
  type: NodePort
